<resources>
    <!-- Used in multiple activities -->
    <string name="app_name" translatable="false">WeightLiftr</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="input_not_valid">Input Not Valid!</string>
    <string name="workout_name">Workout Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_sets">Sets</string>
    <string name="exercise_reps">Reps</string>
    <string name="exercise_rest_time">Rest Time (Seconds)</string>
    <string name="image_button_desc">Press To Select</string>
    <string name="ex_choice_scroll_view_desc">A list of created exercises to choose from.</string>

    <!-- Used only in activity_add_new_workout -->
    <string name="create_new_workout">Create New Workout</string>
    <string name="create">Create</string>
    <string name="new_ex_adding">Add This Exercise</string>
    <string name="new_ex_not_adding">Add New Exercise?</string>

    <!-- Used only in activity_edit_workout -->
    <string name="edit_existing_workout">Edit Existing Workout</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="delete_workout">Delete Workout?</string>
    <string name="exercise_scroll_view_desc">Details of each exercise in the chosen workout.</string>

    <!-- Used only in activity_main -->
    <string name="suggested_for_today">Suggested For Today</string>
    <string name="suggestion_text">%1$s?</string>
    <string name="nav_new_workout">Create a New Workout</string>
    <string name="nav_edit_workout">Edit an Existing Workout</string>
    <string name="nav_view_workouts">View All Current Workouts</string>
    <string name="nav_start_workout">Start a Workout</string>
    <string name="suggested_button_desc">Suggests and points to another activity.</string>

    <!-- Used only in activity_start_workout -->
    <string name="start_workout">Start Workout</string>
    <string name="current_set_num">Current Set: %1$d / %2$d</string>
    <string name="current_reps_num">Reps: %1$d</string>
    <string name="start_next_set">Start Next Set!</string>
    <string name="set_in_progress">Set In Progress</string>
    <string name="start_set">Start Set</string>
    <string name="finish_set">Finish Set</string>

    <!-- Used only in activity_view_all_workouts -->
    <string name="extra_workout_details">%1$s %2$s\n
                                            \t\t\t\t - Sets: %3$d\n
                                            \t\t\t\t - Reps: %4$d\n
                                            \t\t\t\t - Rest Time: %5$ds\n</string>

</resources>