<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newWorkoutBut"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/nav_new_workout"
        android:textAllCaps="false"
        android:backgroundTint="@color/button_color"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editWorkoutBut"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/editWorkoutBut"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/nav_edit_workout"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toTopOf="@+id/startWorkoutBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/allWorkoutsBut"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/nav_view_workouts"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWorkoutBut"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/startWorkoutBut"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/nav_start_workout"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/allWorkoutsBut"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/suggestedLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggested_for_today"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/suggestionBut1"
        android:layout_width="356dp"
        android:layout_height="99dp"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/button_color"
        android:contentDescription="@string/suggested_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/suggestionBut2"
        android:layout_width="356dp"
        android:layout_height="99dp"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:textSize="17sp"
        android:backgroundTint="@color/button_color"
        android:contentDescription="@string/suggested_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

</androidx.constraintlayout.widget.ConstraintLayout>